--- a/src/components/LxModal/components/ModalContent/style.scss
+++ b/src/components/LxModal/components/ModalContent/style.scss
@@ -7,7 +7,7 @@
 }
 
 .scroll-container {
-	$sb-track-color: #efefef;
+	$sb-track-color: #f7f7f7;
 	$sb-thumb-color: #bbbbbb;
 	$sb-size: 10px;
 	// 	&::-webkit-scrollbar {
