--- a/src/components/LxModal/components/ModalContent/style.scss
+++ b/src/components/LxModal/components/ModalContent/style.scss
@@ -63,7 +63,8 @@
 	align-items: stretch;
 	transition: transform 0.1s linear;
 }
-.modal-header {
+// windows风格的弹窗头部
+.modal-header.windows {
 	line-height: 2rem;
 	border-top-right-radius: inherit;
 	border-top-left-radius: inherit;
@@ -76,7 +77,7 @@
 	align-items: center;
 	cursor: all-scroll;
 	background-color: #f7f7f7;
-	&-left {
+	& > .modal-header-left {
 		margin-left: 5px;
 		&-title {
 			font-weight: bold;
@@ -85,7 +86,7 @@
 			text-overflow: ellipsis; /*溢出的部分使用省略号*/
 		}
 	}
-	&-right {
+	& > .modal-header-right {
 		color: #848484;
 		margin-right: 5px;
 		display: flex;
@@ -94,11 +95,51 @@
 		justify-content: space-evenly;
 		align-items: center;
 		height: inherit;
-		&-btn {
+		& > .modal-header-right-btn {
 			cursor: pointer;
 			width: 2rem;
 			height: inherit;
 			border-left: 1px solid #e4e7ed;
+			text-align: center;
+		}
+	}
+}
+// mac风格的弹窗头部
+.modal-header.mac {
+	line-height: 2rem;
+	border-top-right-radius: inherit;
+	border-top-left-radius: inherit;
+	border-top: 1px solid #e4e7ed;
+	border-bottom: 1px solid #e4e7ed;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	cursor: all-scroll;
+	background-color: #f7f7f7;
+	& > .modal-header-left {
+		margin-right: 5px;
+		&-title {
+			font-weight: bold;
+			white-space: nowrap; /*强制内容在一行显示*/
+			overflow: hidden; /*超出部分隐藏*/
+			text-overflow: ellipsis; /*溢出的部分使用省略号*/
+		}
+	}
+	& > .modal-header-right {
+		color: #848484;
+		margin-left: 5px;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: nowrap;
+		justify-content: space-evenly;
+		align-items: center;
+		height: inherit;
+		& > .modal-header-right-btn {
+			cursor: pointer;
+			width: 2rem;
+			height: inherit;
 			text-align: center;
 		}
 	}
